--- a/css/style.css
+++ b/css/style.css
@@ -99,9 +99,21 @@ body{
         text-align: left;
         text-decoration: none;
 }
+.secondary-link{
+    display: flex;
+}
 .outsite-nav .secondary-link:hover,
 .outsite-nav .secondary-link:focus{
     color:var(--hover-color)
+}
+
+.icon-enveloper{
+    margin-right: 10px;
+    fill: currentColor;
+}
+.icon-smartphone{
+    margin-right: 10px;
+    fill: currentColor;
 }
 /* Hero */
 .hero{
@@ -179,6 +191,13 @@ body{
 }
 .feature-list .item+.item{
     margin-left: 30px;
+}
+.feature-background{
+    width: 270px;
+    height: 120px;
+    background-color:var(--card-color);
+    padding: 25px 100px;
+    margin-bottom: 30px;
 }
 /* Work */
 .htitle{
