--- a/css/style.css
+++ b/css/style.css
@@ -381,6 +381,7 @@ margin-top: 9px;
 .social-background-footer:focus,
 .social-background-footer:hover{
     background-color: var(--hover-color);
+    cursor: pointer;
 }
 
 
@@ -445,6 +446,11 @@ margin-top: 9px;
     margin-bottom: 30px;
     margin-right: 30px;
 
+}
+.portfolio-card:hover,
+.portfolio-card:focus{
+    border: 1px solid #EEEEEE;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .frame{
     border-left:1px solid var(--ramka-color);
