--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,8 @@ body{
     margin-left: 50px;
 }
 .outsite-nav .secondary-link{
+    display: flex;
+    align-items: center;
     color: var(--outlink-color);
         font-size: 14px;
         font-weight: 500;
@@ -194,10 +196,11 @@ body{
     margin-left: 30px;
 }
 .feature-background{
-    width: 270px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 120px;
     background-color:var(--card-color);
-    padding: 25px 100px;
     margin-bottom: 30px;
 }
 
@@ -265,30 +268,29 @@ img {
     padding: 30px 0 16px 0;
 }
 .social {
-    display: inline-flex
+    display: inline-flex;
+}
+.social .item +.item{
+    margin-left: 10px;
 }
 
 .social-background {
+    display: flex;
+    align-items: center;
+    justify-content:center;
     width: 44px;
     height: 44px;
-    padding: 12px;
     border-radius: 50%;
-    fill:var(--social-color)
-    /* background-color: #2196F3; */
-
+    fill:var(--social-color);
 }
 .social-background:hover,
 .social-background:focus{
     background-color: var(--hover-color);
     fill:var(--white-color);
-    cursor: pointer;
 }
 
 .link-position {
     padding: 0px 32px 30px 32px;
-}
-.social .item+.item {
-    margin-left: 10px;
 }
 /* Clients */
 .clients{
@@ -449,7 +451,7 @@ margin-top: 9px;
 }
 .portfolio-card:hover,
 .portfolio-card:focus{
-    border: 1px solid #EEEEEE;
+    /* border: 1px solid #EEEEEE; */
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .frame{
