--- a/css/style.css
+++ b/css/style.css
@@ -373,10 +373,15 @@ margin-top: 9px;
 .link-position-footer{
     margin-left: 70px;
 }
+.social-footer + .social-footer{
+    margin-left: 10px;
+}
 .social-background-footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 44px;
         height: 44px;
-        padding: 12px;
         border-radius: 50%;
         background: rgba(255, 255, 255, 0.1);
         fill: var(--white-color);
@@ -385,7 +390,6 @@ margin-top: 9px;
 .social-background-footer:focus,
 .social-background-footer:hover{
     background-color: var(--hover-color);
-    cursor: pointer;
 }
 
 
